--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/elizar/btg/issues"
   },
-  "homepage": "https://github.com/elizar/btg#readme"
+  "homepage": "https://github.com/elizar/btg#readme",
+  "devDependencies": {
+    "cucumber": "^0.9.4"
+  }
 }
