--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "zombie": "^4.2.1"
   },
   "dependencies": {
-    "koa": "^1.1.2"
+    "co-body": "^4.0.0",
+    "co-views": "^2.1.0",
+    "koa": "^1.1.2",
+    "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "koala": "^1.0.0"
   }
 }
