--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa": "^1.1.2",
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.2",
+    "koa-send": "^3.1.0",
     "koala": "^1.0.0"
   }
 }
