--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
   },
 
   "env": {
-		"es6": true           // es2015+
+		"es6": true,         // es2015+
     "browser": true,     // browser global variables
     "node": true,        // Node.js global variables and Node.js-specific rules
     "amd": true,         // defines require() and define() as global variables as per the amd spec
@@ -186,7 +186,6 @@
     "linebreak-style": 0,             // disallow mixed 'LF' and 'CRLF' as linebreaks (off by default)
     "max-nested-callbacks": 0,        // specify the maximum depth callbacks can be nested (off by default)
     "new-cap": 0,                     // require a capital letter for constructors
-    "new-parens": 0,                  // disallow the omission of parentheses when invoking a constructor with no arguments
     "new-parens": 0,                  // disallow the omission of parentheses when invoking a constructor with no arguments
     "newline-after-var": 0,           // allow/disallow an empty newline after var statement (off by default)
     "no-array-constructor": 0,        // disallow use of the Array constructor
