--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-send": "^3.1.0",
-    "koala": "^1.0.0"
+    "koala": "^1.0.0",
+    "swig": "^1.4.2"
   }
 }
