--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "eslint": "^2.1.0",
     "html5": "^1.0.5",
     "mocha": "^2.4.5",
-    "nodemon": "^1.8.1",
     "should": "^8.2.2",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
@@ -46,6 +45,7 @@
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-send": "^3.1.0",
-    "koala": "^1.0.0"
+    "koala": "^1.0.0",
+    "pm2": "^1.0.1"
   }
 }
