--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "koa-route": "^2.4.2",
     "koa-send": "^3.1.0",
     "koala": "^1.0.0",
-    "pm2": "^1.0.1"
+    "pm2": "^1.0.1",
+    "swig": "^1.4.2"
   }
 }
