--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,14 @@ services:
       - redis
     ports:
       - "80:3000"
+    environment:
+      - MONGODB_URL=mondogb://admin:${BTG_PASS}@mongodb:27017
+      - REDIS_URL=redis://:${BTG_PASS}@redis:6379
   redis:
     image: tutum/redis
+    environment:
+      - REDIS_PASS=${BTG_PASS}
   mongodb:
     image: tutum/mongodb
+    environment:
+      - MONGODB_PASS=${BTG_PASS}
