--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "co-views": "^2.1.0",
     "koa": "^1.1.2",
     "koa-logger": "^1.3.0",
-    "koa-route": "^2.4.2",
+    "koa-router": "^5.4.0",
     "koa-send": "^3.1.0",
     "koala": "^1.0.0",
     "pm2": "^1.0.1",
