--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "koa-router": "^5.4.0",
     "koa-send": "^3.1.0",
     "koala": "^1.0.0",
+    "mongoose": "^4.4.4",
     "pm2": "^1.0.1",
     "swig": "^1.4.2"
   }
