--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "co-body": "^4.0.0",
     "co-views": "^2.1.0",
     "koa": "^1.1.2",
+    "koa-generic-session": "^1.10.1",
     "koa-logger": "^1.3.0",
+    "koa-redis": "^2.0.1",
     "koa-router": "^5.4.0",
     "koa-send": "^3.1.0",
     "koala": "^1.0.0",
