Fixes redis connect fallback
- Updates travis config
  - Add redis service
  - Add mongodb service

Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ node_js:
   - "5"
 test:
   - make test
+services:
+  - redis-server
+  - mongodb
 notifications:
     slack: postgz:8aCYqAO7JD0hQxXl98UnD0sp
