--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,9 @@ services:
     ports:
       - "80:3000"
     environment:
-      - MONGODB_URL=mongodb://btg:${BTG_PASS}@mongodb/btg
-      - REDIS_URL=redis://:${BTG_PASS}@redis
+      - MONGODB_URL=mongodb://mongodb/btg
+      - REDIS_URL=redis://redis
   redis:
-    image: tutum/redis
-    environment:
-      - REDIS_PASS=${BTG_PASS}
+    image: redis:3.0
   mongodb:
-    image: tutum/mongodb:3.2
-    environment:
-      - MONGODB_PASS=${BTG_PASS}
-      - MONGODB_DATABASE=btg
-      - MONGODB_USER=btg
+    image: mongo:3.0
