--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "co-body": "^4.0.0",
     "co-views": "^2.1.0",
     "koa": "^1.1.2",
+    "koa-body": "^1.4.0",
     "koa-generic-session": "^1.10.1",
     "koa-logger": "^1.3.0",
     "koa-redis": "^2.0.1",
