--- a/package.json
+++ b/package.json
@@ -42,15 +42,18 @@
   "dependencies": {
     "co-body": "^4.0.0",
     "co-views": "^2.1.0",
+    "grant-koa": "^3.5.5",
     "koa": "^1.1.2",
     "koa-generic-session": "^1.10.1",
     "koa-logger": "^1.3.0",
+    "koa-mount": "^1.3.0",
     "koa-redis": "^2.0.1",
     "koa-router": "^5.4.0",
     "koa-send": "^3.1.0",
     "koala": "^1.0.0",
     "mongoose": "^4.4.5",
     "pm2": "^1.0.1",
+    "purest": "^2.0.1",
     "swig": "^1.4.2"
   }
 }
