--- a/config/app.json
+++ b/config/app.json
@@ -9,6 +9,12 @@
   "docker": {
     "port": 3000
   },
+  "travis": {
+    "port": 3000,
+    "keys": [
+      "3cced13707cba542effe9f3796bb9c531f770ebe"
+    ]
+  },
   "prod": {
     "port": 3000,
     "keys": [
