--- a/config/app.json
+++ b/config/app.json
@@ -7,7 +7,11 @@
     ]
   },
   "docker": {
-    "port": 3000
+    "port": 3000,
+    "keys": [
+      "beep boop",
+      "wadiwasi"
+    ]
   },
   "travis": {
     "port": 3000,
