--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "80:3000"
     environment:
+      - NODE_ENV=docker
       - MONGODB_URL=mongodb://mongodb/btg
       - REDIS_URL=redis://redis
   redis:
