--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "co-views": "^2.1.0",
     "grant-koa": "^3.5.5",
     "koa": "^1.1.2",
+    "koa-connect-flash": "^0.1.2",
     "koa-generic-session": "^1.10.1",
     "koa-logger": "^1.3.0",
     "koa-mount": "^1.3.0",
